# excel_to_xml

./: .gitignore  Cargo.toml  ExcelToXML  FLUTTER_QUICKSTART.md  README_Flutter.md  build_for_flutter.sh  example_cfg
.github/workflows/: release.yml
flutter_example/: excel_to_xml_lib.dart  excel_to_xml_lib_simple.dart  pubspec_example.yaml
flutter_lib/: libexcel_to_xml.dylib
include/: excel_to_xml.h
src/: config.rs  find_files.rs  lib.rs  main.rs  read_excel.rs  write_xml.rs
tests/: test_ffi.rs
