[package]
name = "ExcelToXML"
version = "0.1.3"
edition = "2021"

[lib]
name = "excel_to_xml"
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "excel_to_xml"
path = "src/main.rs"

[dependencies]
# Excel读取
calamine = "0.26.1"
# JSON解析
# serde = "1.0.215"
serde_json = "1.0.140"
# xml读写
quick-xml = "0.37.3"
# 正则表达式
regex = "1.11.1"
# FFI支持
libc = "0.2"

[dev-dependencies]
# 测试依赖
